@@ -76,6 +76,7 @@ struct au_branch;
 void au_dy_put(struct au_dykey *key);
 int au_dy_iaop(struct inode *inode, aufs_bindex_t bindex,
 		struct inode *h_inode);
+int au_dy_irefresh(struct inode *inode);
 void au_dy_arefresh(int do_dio);
 const struct vm_operations_struct *
 au_dy_vmop(struct file *file, struct au_branch *br,
@@ -83,27 +84,6 @@ au_dy_vmop(struct file *file, struct au_branch *br,
 
 void __init au_dy_init(void);
 void au_dy_fin(void);
-
-/* ---------------------------------------------------------------------- */
-
-/*
- * Is it safe to replace a_ops during the inode/file is in operation?
- * Yes, I hope so.
- */
-static inline int au_dy_irefresh(struct inode *inode)
-{
-	int err;
-	aufs_bindex_t bstart;
-	struct inode *h_inode;
-
-	err = 0;
-	if (S_ISREG(inode->i_mode)) {
-		bstart = au_ibstart(inode);
-		h_inode = au_h_iptr(inode, bstart);
-		err = au_dy_iaop(inode, bstart, h_inode);
-	}
-	return err;
-}
 
 #endif /* __KERNEL__ */
 #endif /* __AUFS_DYNOP_H__ */
